--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@
 <body>
   <div class="center-bg">
     <form action="javascript:void(0);" class="form" id="welcome-section">
-      <img src="https://api.dicebear.com/7.x/miniavs/svg?seed=王家睿" class="avatar" alt="头像" style="margin-bottom: 1rem;" />
+      <img src="头像.jpg" class="avatar" alt="头像" style="margin-bottom: 1rem;" />
       <p style="margin-bottom:0;">
         王家睿的个人简历
         <span>欢迎来到我的专属空间</span>
