--- a/index.html
+++ b/index.html
@@ -2538,7 +2538,7 @@
       <div style="background: white; border-radius: 16px; padding: 24px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); display: flex; flex-direction: column; justify-content: space-between; min-height: 250px;">
         <div>
           <h3 style="color: #333; margin-bottom: 20px;">Web项目</h3>
-          <p style="color:#444; margin-bottom: 16px; font-size:15px;">包括个人简历网站、数据可视化展示等，前端后端均有涉及。如需了解具体项目内容，请留言联系。</p>
+          <p style="color:#444; margin-bottom: 16px; font-size:15px;">包括个人简历网站、uniapp上位机程序等。若需要了解具体项目内容，请点击链接。</p>
         </div>
         <a href="https://github.com/Metalphon/visual" target="_blank" class="btn-github" style="margin-top:18px; align-self: center;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right:6px;"><path d="M12 2C6.477 2 2 6.484 2 12.021c0 4.428 2.865 8.184 6.839 9.504.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.342-3.369-1.342-.454-1.155-1.11-1.463-1.11-1.463-.908-.62.069-.608.069-.608 1.004.07 1.532 1.032 1.532 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.339-2.221-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.987 1.029-2.686-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.025A9.564 9.564 0 0 1 12 6.844c.85.004 1.705.115 2.504.337 1.909-1.295 2.748-1.025 2.748-1.025.546 1.378.202 2.397.1 2.65.64.699 1.028 1.593 1.028 2.686 0 3.847-2.337 4.695-4.566 4.944.359.309.678.919.678 1.852 0 1.336-.012 2.417-.012 2.747 0 .267.18.577.688.479C19.138 20.2 22 16.447 22 12.021 22 6.484 17.523 2 12 2z"></path></svg>
