--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@
 <body>
   <div class="center-bg">
     <form action="javascript:void(0);" class="form" id="welcome-section">
-      <img src="头像.jpg" class="avatar" alt="头像" style="margin-bottom: 1rem;" />
+      <img src="头像.jpg" class="avatar" alt="头像" style="margin-bottom: 1rem;object-fit:cover;width:120px;height:120px;border-radius:50%;box-shadow:0 2px 12px rgba(99,102,241,0.18);border:4px solid #a5b4fc;background:#f3f4f6;" onerror="this.src='https://cdn.jsdelivr.net/gh/Metalphon/static@main/default-avatar.png'" />
       <p style="margin-bottom:0;">
         王家睿的个人简历
         <span>欢迎来到我的专属空间</span>
@@ -2339,6 +2339,38 @@
         </svg>
       </div>
     </div>
+    <!-- 仓库区块卡片区域 -->
+    <div class="container-card-charts" id="serial-tool-card" style="cursor:pointer;width:48%;">
+      <div class="card-charts" style="position:relative;overflow:hidden;height:100%;">
+        <div class="tags-card">
+          <span class="name" style="font-size:16px;font-weight:bold;">串口调试助手</span>
+        </div>
+        <div class="main-texts">
+          <p class="title">Serial Tool</p>
+          <p class="change">点击体验或下载串口调试工具</p>
+        </div>
+        <img src="https://img.icons8.com/ios-filled/50/4f46e5/serial-tasks.png" width="80" height="80" alt="串口调试助手" style="display:block;margin:0 auto;"/>
+      </div>
+    </div>
+    <div class="container-card-charts" id="common-links-card" style="cursor:pointer;width:48%;">
+      <div class="card-charts" style="position:relative;overflow:hidden;height:100%;">
+        <div class="tags-card">
+          <span class="name" style="font-size:16px;font-weight:bold;">常用网站链接</span>
+        </div>
+        <div class="main-texts">
+          <p class="title">常用网站</p>
+          <ul style="color:#444; margin: 12px 0 16px 0; font-size:15px; padding-left:18px;">
+            <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+            <li><a href="https://gitee.com/" target="_blank">Gitee</a></li>
+            <li><a href="https://www.csdn.net/" target="_blank">CSDN</a></li>
+            <li><a href="https://stackoverflow.com/" target="_blank">Stack Overflow</a></li>
+            <li><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+          </ul>
+          <span style="color:#888;font-size:13px;">持续补充中…</span>
+        </div>
+        <img src="https://img.icons8.com/ios-filled/50/4f46e5/link.png" width="80" height="80" alt="常用网站" style="display:block;margin:0 auto;"/>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -2746,3 +2778,26 @@ function getGradeLevelData() {
   background: #f8f4e8 !important;
 }
 </style>
+
+<!-- 游戏弹窗modal -->
+<div id="game-modal" style="display:none;position:fixed;z-index:9999;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.25);align-items:center;justify-content:center;">
+  <div style="position:relative;width:90vw;height:90vh;max-width:900px;max-height:700px;background:#fff;border-radius:18px;box-shadow:0 8px 32px rgba(60,60,120,0.18);overflow:hidden;display:flex;flex-direction:column;">
+    <button id="close-game-modal" style="position:absolute;top:18px;right:24px;z-index:10;font-size:20px;padding:6px 18px;border-radius:8px;border:none;background:#4f46e5;color:#fff;cursor:pointer;">关闭</button>
+    <iframe id="game-iframe" src="" style="flex:1;width:100%;height:100%;border:none;background:#f3f4f6;"></iframe>
+  </div>
+</div>
+<script>
+// 仓库卡片弹窗逻辑
+function openGameModal(game) {
+  var modal = document.getElementById('game-modal');
+  var iframe = document.getElementById('game-iframe');
+  if(game==='serial') iframe.src = 'serial.html';
+  else iframe.src = '';
+  modal.style.display = 'flex';
+}
+document.getElementById('serial-tool-card').onclick = function(){ openGameModal('serial'); };
+document.getElementById('close-game-modal').onclick = function(){ 
+  document.getElementById('game-modal').style.display = 'none';
+  document.getElementById('game-iframe').src = '';
+};
+</script>
